server/infra-DELETE/cluster/ingress-svc-v1.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: int.pitchinclub.com
      http:
        paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: picblog-clusterip-svc
              port:
                number: 3000
